--- a/Trinity_fine_tune.ipynb
+++ b/Trinity_fine_tune.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMN2VsKdCL5f86q15g3wHr3"
+      "authorship_tag": "ABX9TyMN2VsKdCL5f86q15g3wHr3",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -363,6 +364,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/himani26/CaseStudy/blob/main/Trinity_fine_tune.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
